--- a/snaplinker-privacy-policy.html
+++ b/snaplinker-privacy-policy.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>What's New - SmartTip+ v1.0.3</title>
+  <title>SnapLinker 개인정보 처리방침</title>
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
       line-height: 1.6;
-      max-width: 800px;
+      max-width: 900px;
       margin: 40px auto;
       padding: 0 20px;
       color: #333;
+    }
+    h1, h2 {
+      color: #222;
+      margin-top: 1.2em;
     }
     h1 {
       border-bottom: 2px solid #ddd;
@@ -19,19 +23,44 @@
     ul {
       margin: 0.5em 0 1em 1.5em;
     }
+    .meta {
+      font-size: 0.9em;
+      color: #666;
+      margin-top: 2em;
+    }
   </style>
 </head>
 <body>
-  <h1>What's New in SmartTip+ v1.0.3</h1>
+  <h1>SnapLinker 개인정보 처리방침</h1>
 
-  <p>This version includes:</p>
+  <h2>1. 개인정보의 수집 및 이용목적</h2>
+  <p>SnapLinker("회사")는 다음의 목적을 위하여 개인정보를 처리합니다.</p>
   <ul>
-    <li>Updated Privacy Policy URL in compliance with App Store requirements</li>
-    <li>General stability improvements and minor bug fixes</li>
+    <li><strong>수집하는 개인정보 항목</strong>: 사진 라이브러리 (스크린샷 분석 및 분류)</li>
+    <li><strong>개인정보 이용 목적</strong>: 스크린샷 자동 분류 및 관리, URL 자동 연결 기능 제공, 앱 기능 개선</li>
   </ul>
 
-  <p style="font-size: 0.9em; color: #666;">
-    Release Date: September 27, 2025
-  </p>
+  <h2>2. 개인정보의 처리 및 보유기간</h2>
+  <p>모든 개인정보는 사용자 기기 내에서만 처리됩니다. 외부 서버로 개인정보를 전송하지 않습니다.  
+     앱 삭제 시 모든 데이터가 함께 삭제됩니다.</p>
+
+  <h2>3. 개인정보의 제3자 제공</h2>
+  <p>회사는 이용자의 개인정보를 제3자에게 제공하지 않습니다.</p>
+
+  <h2>4. 개인정보의 처리위탁</h2>
+  <p>회사는 개인정보를 외부에 위탁하지 않습니다.</p>
+
+  <h2>5. 정보주체의 권리·의무</h2>
+  <p>이용자는 언제든지 앱을 삭제하여 개인정보 처리를 중단할 수 있습니다.</p>
+
+  <h2>6. 개인정보 보호책임자</h2>
+  <p>이메일: <a href="mailto:prizm_kr@hotmail.com">prizm_kr@hotmail.com</a></p>
+
+  <h2>7. 개인정보 처리방침 변경</h2>
+  <p>본 방침은 2025년 1월 16일부터 적용됩니다.</p>
+
+  <div class="meta">
+    © 2025 SnapLinker. All rights reserved.
+  </div>
 </body>
 </html>
